k8s/novagpt/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novagpt-frontend
  namespace: novagpt

spec:
  selector:
    app: novagpt-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
